--- a/news.html
+++ b/news.html
@@ -82,10 +82,22 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>May 2021</small></h1>
+<p> Welcome to the undergraduate students joining our lab in Summer 2021:</p>
+
+
+ <img src="images/people/Raleigh.jpg" height="180"> &nbsp; <img src="images/people/Janelle.jpg" height="180"> &nbsp;<img src="images/people/usmaan.jpg" height="180">&nbsp;<img src="images/people/Devanshu.png" height="180"> </p>
+<p> Left to right: 
+Raleigh Wunderlich and Janelle Arnold (Advanced Material Sciences REU), Usmaan Al-Shehab (Biophysics REU), Devanshu Thakar (Internship IIT Gandhinagar)
+</p>
+
 
 <h1 class="page-header"><small>April 2021</small></h1>
 
-<p> <strong> Congratulations to Eric Miller </a></strong> on winning the Third Place Poster Award at the Undergraduate Research in Polymer Science Symposium at the 2021 Spring National American Chemical Society meeting. The award is sponsored by the POLY/PMSE MACRO committee. </p>
+<p> <strong> Congratulations to Eric Miller </a></strong> on winning the Third Place Poster Award at the Undergraduate Research in Polymer Science Symposium at the 2021 Spring National American Chemical Society meeting:
+<a href=https://www.polyacs.net/2021undergradpolyresearch> https://www.polyacs.net/2021undergradpolyresearch </a>
+The award is sponsored by the POLY/PMSE MACRO committee. </p>
+<img src="images/ACSEric.png" height="" ="40"> </p>
 <p> 
     Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale modeling of nanogel degradation: effect of crosslink density and particle size </em>
   
@@ -100,7 +112,7 @@
 
 <p> <strong> Congratulations to Eric Miller on winning  <a href= https://materials.typepad.com/mrs_meeting_scene/2020/12/best-poster-winners-2020-mrs-fall-meeting.html> Best Poster Award at 2020 Fall MRS Meeting </a></strong> </p>
 </p>
-<img src="images/EricMRS.jpg" height="360"> </p>
+<img src="images/EricMRS.jpg" width="420"> </p>
 
 <p> 
     Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale Modeling of Controlled Erosion of Tetra-Arm Polyethylene Glycol Based Nanogels </em>2020 Virtual MRS Meeting.
@@ -120,7 +132,7 @@
 <h1 class="page-header"><small>May 2020</small></h1>
 <p> Virtual group meetings. Welcome Eric Miller!</p>
 
- <img src="images/photos/Zoom.png" height="240"> </p>
+ <img src="images/photos/Zoom.png" height="270"> </p>
 
 
 <h1 class="page-header"><small>December 2019</small></h1>
@@ -128,21 +140,22 @@
 
 <p> MRS Fall 2019</p>
 
- <img src="images/photos/MRS1.jpg" height="210"> &nbsp;<img src="images/photos/VaibhavMRS2.jpg" height="210"></p>
+ <img src="images/photos/MRS1.jpg" height="240"> &nbsp;<img src="images/photos/VaibhavMRS2.jpg" height="240"></p>
 
 
 <h1 class="page-header"><small>October 2019</small></h1>
 
 <p>Hiking trip with Prof. Pratyush Dayal form IIT Gandhinagar </p>
 <p style="width:45%">
-                                      <img  src="images/photos/WithPratyush.jpg" height="285"></p>
+                                      <img  src="images/photos/WithPratyush.jpg" height="310"></p>
 
   <h1 class="page-header"><small>August 2019</small></h1>
 
 <p>Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).</p>
 <p style="width:45%">
-                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="440px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
+                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="480px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
+<a href=https://lammps.sandia.gov/workshops/Aug19/poster_palkar.pdf> https://lammps.sandia.gov/workshops/Aug19/poster_palkar.pdf </a>
                 <h1 class="page-header"><small>July 2019</small></h1>
 
  <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)</p>
