--- a/people.html
+++ b/people.html
@@ -123,30 +123,51 @@
 
                     </div>
                 </div>
-                <div class="item">
-
-                    <div class="small">
-                        <a name=vp><img src="images/people/Olivia.png"></a>
+                   <div class="item">
+                    <div class="small">             
+                        <a name=vp><img src="images/people/Raleigh.jpg"></a>
                     </div>
                     <div class="description">
-                        <p class="title">Olivia Sequerth</p>
-                        <p class="subtitle">M.S. Student</p>
+                        <p class="title">Raleigh.jpg</p>
+                        <p class="subtitle"> REU in Advanced Material Sciences, CU
+                        </p>
+
 
                     </div>
                 </div>
-
                 <div class="item">
-
                     <div class="small">
-                        <a name=vp><img src="images/people/Eric.jpg"></a>
+                        <a name=vp><img src="images/people/Janelle.jpg"></a>
                     </div>
                     <div class="description">
-                        <p class="title">Eric Miller </p>
-                        <p class="subtitle">Undegraduate Researcher</p>
+                        <p class="title">Janelle Arnold</p>
+                        <p class="subtitle"> REU in Advanced Material Sciences, CU
+                        </p>
+
 
                     </div>
                 </div>
-
+                <div class="item">
+                    <div class="small">
+                        <a name=vp><img src="images/people/usmaan.jpg"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title">Usmaan Al-Shehab</p>
+                        <p class="subtitle"> Biophysics REU, CU, collaboration with Prof. Joshua Alper (Physics Dep, CU)
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                        <a name=vp><img src="images/people/Devanshu.png"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title"> Devanshu Thakar </p>
+                        <p class="subtitle"> Internship at IIT Gandhinagar, India, collaboration with Prof. Pratyush Dayal (IIT Gandhinagar
+                        </p>
+                    </div>
+                </div>
+ 
 
 <h1 class="page-header">Former Group Members</h1>
 
@@ -173,14 +194,84 @@
     </div>
 </div>
 
-<h2>Undergraduate students</h2>
+<div class="item">
+    <div class="small">
+    </div>
+    <div class="description">
+        <p class="title">Olivia Sequerth</p>
+        <p class="subtitle">M.S. May 2021</p>
+    </div>
+</div>
 
-<p><strong>Kaila Craig</strong>, Biophysics REU, Summer 2018</p>
-<p><strong>Michaela Giltner</strong>, Advanced Material Sciences Summer REU, Summer 2018</p>
-<p><strong>Khili Khamesra</strong>, Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2018
-<p><Strong>Chinmay Sonar</Strong>, Summer Internship with  Indian Institute of Technology Gandhinagar, Summer 2017; now Ph.D. student at UC Santa Barbara</p>
-<p><strong>Samantha  Collins</strong>, Interfaces and Surfaces REU, Summer 2017</p>
-<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016; now Ph. D. student at Ohio State University, Columbus</p>
+<h2>Undergraduate students</h2>
+                <div class="item">
+
+                    <div class="small">
+                        <a name=vp><img src="images/people/Eric.jpg"></a>
+                    </div>
+                    <div class="description">
+                        <p class="title">Eric Miller </p>
+                        <p class="subtitle">Undegraduate Researcher Fall 2020-Spring 2021 </p>
+                        <p class="subtitle">Advanced Material Sciences Summer REU, Summer 2020 </p>
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title">Kaila Craig </p>
+                        <p class="subtitle">Biophysics REU, Summer 2018</p>
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title">Michaela Giltner </p>
+                        <p class="subtitle">Advanced Material Sciences Summer REU, Summer 2018</p>
+                    </div>
+                </div>
+               <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title">Khili Khamesra </p>
+                        <p class="subtitle">Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2018</p>
+                    </div>
+                </div>
+
+               <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title">Chinmay Sonar </p>
+                        <p class="subtitle">Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2017</p>
+                        <p class="subtitle">now Ph.D. student at UC Santa Barbara</p>
+                    </div>
+                </div>
+                    
+
+                <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title"> Samantha  Collins </p>
+                        <p class="subtitle">Interfaces and Surfaces REU, Summer 2017</p>
+                    </div>
+                </div>
+                
+
+               <div class="item">
+                    <div class="small">
+                    </div>
+                    <div class="description">
+                        <p class="title">Tyler Morrison </p>
+                        <p class="subtitle">Interfaces and Surfaces REU, Summer 2016</p>
+                        <p class="subtitle">now Ph.D. student at Ohio State University, Columbus</p>
+                    </div>
+                </div>
 
 <p><strong> <h1 class="page-header">Openings</h1> </strong></p>
 
