--- a/people.html
+++ b/people.html
@@ -128,7 +128,7 @@
                         <a name=vp><img src="images/people/Raleigh.jpg"></a>
                     </div>
                     <div class="description">
-                        <p class="title">Raleigh.jpg</p>
+                        <p class="title">Raleigh Wunderlich</p>
                         <p class="subtitle"> REU in Advanced Material Sciences, CU
                         </p>
 
