--- a/people.html
+++ b/people.html
@@ -77,12 +77,12 @@
 
         <!-- Heading -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-20">
                 <h1 class="page-header">People</h1>
 
                 <div class="item">
-                    <div class="small">
-                        <img src="images/people/kuksenok.jpg">
+                     <div class="small">
+                        <img src=images/people/kuksenok.jpg width=160>
                     </div>
                     <div class="description">
                         <p class="title">Dr. Olga Kuksenok</p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="item">
                     <div class="small">
-                        <a name=st><img src="images/people/tu.bmp"></a>
+                        <a name=st><img src=images/people/tu.bmp width=16></a>
                     </div>
                     <div class="description">
                         <p class="title">Sidong Tu</p>
