--- a/people.html
+++ b/people.html
@@ -81,42 +81,42 @@
                 <h1 class="page-header">People</h1>
 
                 <div class="item">
-                     <div class="small">
-                        <img src=images/people/kuksenok.jpg width=160>
+                        <div class="small2 ">
+                        <img src=images/people/kuksenok.jpg>
                     </div>
-                    <div class="description">
-                        <p class="title">Dr. Olga Kuksenok</p>
+                    <div class="description2">
+                        <p class="title2">Dr. Olga Kuksenok</p>
                         <p class="subtitle">Associate Professor<br>Principal Investigator</p>
                         <p class="subtitle">okuksen@<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
-                        <a name=st><img src=images/people/tu.bmp width=16></a>
+        <div class="small2">
+                        <a name=st><img src=images/people/tu.png width=16></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Sidong Tu</p>
+                    <div class="description2">
+                        <p class="title2">Sidong Tu</p>
                         <p class="subtitle">PhD Student</p>
                         <p class="subtitle">sidongt@g.<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                         <a name=yx><img src="images/people/xiong.png"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Yao Xiong</p>
+                    <div class="description2">
+                        <p class="title2">Yao Xiong</p>
                         <p class="subtitle">PhD Student</p>
                         <p class="subtitle">xiong3@g.<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
 
-                    <div class="small">
+                    <div class="small2">
                         <a name=vp><img src="images/people/palkar.png"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Vaibhav Palkar</p>
+                    <div class="description2">
+                        <p class="title2">Vaibhav Palkar</p>
                         <p class="subtitle">PhD Student</p>
                         <p class="subtitle">vpalkar@g.<img src=images/emailsuffix.png height=16></p>
 
@@ -124,11 +124,11 @@
                     </div>
                 </div>
                    <div class="item">
-                    <div class="small">             
+                    <div class="small2">             
                         <a name=vp><img src="images/people/Raleigh.jpg"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Raleigh Wunderlich</p>
+                    <div class="description2">
+                        <p class="title2">Raleigh Wunderlich</p>
                         <p class="subtitle"> REU in Advanced Material Sciences, CU
                         </p>
 
@@ -136,11 +136,11 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                         <a name=vp><img src="images/people/Janelle.jpg"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Janelle Arnold</p>
+                    <div class="description2">
+                        <p class="title2">Janelle Arnold</p>
                         <p class="subtitle"> REU in Advanced Material Sciences, CU
                         </p>
 
@@ -148,21 +148,21 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                         <a name=vp><img src="images/people/usmaan.jpg"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Usmaan Al-Shehab</p>
+                    <div class="description2">
+                        <p class="title2">Usmaan Al-Shehab</p>
                         <p class="subtitle"> Biophysics REU, CU, collaboration with Prof. Joshua Alper (Physics Dep, CU)
                         </p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                         <a name=vp><img src="images/people/Devanshu.png"></a>
                     </div>
-                    <div class="description">
-                        <p class="title"> Devanshu Thakar </p>
+                    <div class="description2">
+                        <p class="title2"> Devanshu Thakar </p>
                         <p class="subtitle"> Internship at IIT Gandhinagar, India, collaboration with Prof. Pratyush Dayal (IIT Gandhinagar
                         </p>
                     </div>
@@ -173,32 +173,32 @@
 
 <h2>Post-Doctoral Researchers</h2>
 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                         <a name=cc><img src="images/people/choudhury.png"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Dr. Chandan K. Choudhury</p>
+                    <div class="description2">
+                        <p class="title2">Dr. Chandan K. Choudhury</p>
                         <p class="subtitle">Post-Doctoral Researcher, now Senior Scientist at Prescience Insilico Pvt. Bangalore, India</p>
                     </div>
                 </div>
 
 <h2>Graduate students</h2>
 <div class="item">
-    <div class="small">
+    <div class="small2">
         <a name="os"><img src="images/people/savchak.png"></a>
     </div>
-    <div class="description">
-        <p class="title">Oksana Savchak</p>
+    <div class="description2">
+        <p class="title2">Oksana Savchak</p>
         <p class="subtitle">M.S. August 2018</p>
         <p class="subtitle">now at LAM International, Portland, OR</p>
     </div>
 </div>
 
 <div class="item">
-    <div class="small">
+    <div class="small2">
     </div>
-    <div class="description">
-        <p class="title">Olivia Sequerth</p>
+    <div class="description2">
+        <p class="title2">Olivia Sequerth</p>
         <p class="subtitle">M.S. May 2021</p>
     </div>
 </div>
@@ -206,47 +206,47 @@
 <h2>Undergraduate students</h2>
                 <div class="item">
 
-                    <div class="small">
+                    <div class="small2">
                         <a name=vp><img src="images/people/Eric.jpg"></a>
                     </div>
-                    <div class="description">
-                        <p class="title">Eric Miller </p>
+                    <div class="description2">
+                        <p class="title2">Eric Miller </p>
                         <p class="subtitle">Undegraduate Researcher Fall 2020-Spring 2021 </p>
                         <p class="subtitle">Advanced Material Sciences Summer REU, Summer 2020 </p>
 
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title">Kaila Craig </p>
+                    <div class="description2">
+                        <p class="title2">Kaila Craig </p>
                         <p class="subtitle">Biophysics REU, Summer 2018</p>
 
                     </div>
                 </div>
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title">Michaela Giltner </p>
+                    <div class="description2">
+                        <p class="title2">Michaela Giltner </p>
                         <p class="subtitle">Advanced Material Sciences Summer REU, Summer 2018</p>
                     </div>
                 </div>
                <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title">Khili Khamesra </p>
+                    <div class="description2">
+                        <p class="title2">Khili Khamesra </p>
                         <p class="subtitle">Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2018</p>
                     </div>
                 </div>
 
                <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title">Chinmay Sonar </p>
+                    <div class="description2">
+                        <p class="title2">Chinmay Sonar </p>
                         <p class="subtitle">Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2017</p>
                         <p class="subtitle">now Ph.D. student at UC Santa Barbara</p>
                     </div>
@@ -254,20 +254,20 @@
                     
 
                 <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title"> Samantha  Collins </p>
+                    <div class="description2">
+                        <p class="title2"> Samantha  Collins </p>
                         <p class="subtitle">Interfaces and Surfaces REU, Summer 2017</p>
                     </div>
                 </div>
                 
 
                <div class="item">
-                    <div class="small">
+                    <div class="small2">
                     </div>
-                    <div class="description">
-                        <p class="title">Tyler Morrison </p>
+                    <div class="description2">
+                        <p class="title2">Tyler Morrison </p>
                         <p class="subtitle">Interfaces and Surfaces REU, Summer 2016</p>
                         <p class="subtitle">now Ph.D. student at Ohio State University, Columbus</p>
                     </div>
