--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
 
                 <div class="item">
                         <div class="small2 ">
-                        <img src=images/people/kuksenok.jpg>
+                        <img src=images/people/kuksenok.jpg width=240>
                     </div>
                     <div class="description2">
                         <p class="title2">Dr. Olga Kuksenok</p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="item">
         <div class="small2">
-                        <a name=st><img src=images/people/tu.png width=16></a>
+                        <a name=st><img src=images/people/tu.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Sidong Tu</p>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=yx><img src="images/people/xiong.png"></a>
+                        <a name=yx><img src="images/people/xiong.png width=240"></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Yao Xiong</p>
@@ -113,7 +113,7 @@
                 <div class="item">
 
                     <div class="small2">
-                        <a name=vp><img src="images/people/palkar.png"></a>
+                        <a name=vp><img src="images/people/palkar.png width=240"></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Vaibhav Palkar</p>
@@ -125,7 +125,7 @@
                 </div>
                    <div class="item">
                     <div class="small2">             
-                        <a name=vp><img src="images/people/Raleigh.jpg"></a>
+                        <a name=vp><img src="images/people/Raleigh.jpg width=240"></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Raleigh Wunderlich</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=vp><img src="images/people/Janelle.jpg"></a>
+                        <a name=vp><img src="images/people/Janelle.jpg width=240"></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Janelle Arnold</p>
