--- a/people.html
+++ b/people.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=yx><img src="images/people/xiong.png width=240"></a>
+                        <a name=yx><img src=images/people/xiong.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Yao Xiong</p>
@@ -113,7 +113,7 @@
                 <div class="item">
 
                     <div class="small2">
-                        <a name=vp><img src="images/people/palkar.png width=240"></a>
+                        <a name=vp><img src=images/people/palkar.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Vaibhav Palkar</p>
@@ -125,7 +125,7 @@
                 </div>
                    <div class="item">
                     <div class="small2">             
-                        <a name=vp><img src="images/people/Raleigh.jpg width=240"></a>
+                        <a name=vp><img src=images/people/Raleigh.jpg width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Raleigh Wunderlich</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=vp><img src="images/people/Janelle.jpg width=240"></a>
+                        <a name=vp><img src=images/people/Janelle.jpg width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Janelle Arnold</p>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=vp><img src="images/people/usmaan.jpg"></a>
+                        <a name=vp><img src=images/people/usmaan.jpg width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Usmaan Al-Shehab</p>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="item">
                     <div class="small2">
-                        <a name=vp><img src="images/people/Devanshu.png"></a>
+                        <a name=vp><img src=images/people/Devanshu.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2"> Devanshu Thakar </p>
@@ -174,7 +174,7 @@
 <h2>Post-Doctoral Researchers</h2>
 <div class="item">
                     <div class="small2">
-                        <a name=cc><img src="images/people/choudhury.png"></a>
+                        <a name=cc><img src=images/people/choudhury.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Dr. Chandan K. Choudhury</p>
@@ -185,7 +185,7 @@
 <h2>Graduate students</h2>
 <div class="item">
     <div class="small2">
-        <a name="os"><img src="images/people/savchak.png"></a>
+        <a name="os"><img src=images/people/savchak.png width=240></a>
     </div>
     <div class="description2">
         <p class="title2">Oksana Savchak</p>
@@ -207,7 +207,7 @@
                 <div class="item">
 
                     <div class="small2">
-                        <a name=vp><img src="images/people/Eric.jpg"></a>
+                        <a name=vp><img src=images/people/Eric.jpg width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Eric Miller </p>
