--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Design of Multicomponent Multifunctional Materials</small>
+                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Materials Design </small>
                 </h1>
-                 <a href=group.jpg><img src="group.jpg" style="max-width:900px;width:58%"></a>
+                 <a href=people.html><img src="group.jpg" style="max-width:1100px;width:64%"></a>
+ 
 
 <!--                <div class="illustration" style="width:40%;max-width:400px">
                     <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=150></a>
@@ -89,7 +90,7 @@
                     <img src=images/s3_i4.png width=150></a>&nbsp;&nbsp;<a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e>
                     <img src=images/FrontCoverArt.png width=200></a></div>  -->
 
-<div class="illustration" style="width:40%;max-width:400px">
+<div class="illustration" style="width:34%;max-width:400px">
                     <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=80></a>
                     <a href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src=images/FrontCoverArt.png width=100></a><br><br>
                     <a href=https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src=images/Patterns.png width=80></a>
@@ -97,18 +98,22 @@
                     <a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R><img src=images/s3_i4.png width=80>
                     <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e><img src=images/BackCoverGreen.jpg width=100>
 
+              </a></div> 
 
-              </a></div>
+    <!-- Content
+                <h2>About the PI</h2> -->
 
-                <!--<h2>About the PI</h2>-->
-
-                <p style="margin-top:20px;margin-right:20px">Dr. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University in Clemson, SC.  Dr. Kuksenok received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine, in 1997. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium chemical systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao>More on Google Scholar.</a></em></p>
+                <p style="margin-top:20px;margin-right:30px">Dr. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
                 <br>
                 <div class="h2">Research Areas</div>
 <ul>
-    <li>Computational design of biomimetic materials</li>
- <li>Theory and computer simulations of soft active matter</li>
+<li>Theory and computer simulations of soft active matter</li>
+<li>Degradation of polymer networks</li>
+<li>Computational design of biomimetic materials</li>
 <li>Pattern formation in synthetic and biological systems</li>
+</ul>
+
+<ul>
  <a href=projects.html> <strong> Ongoing projects </strong></a>
 
                 </ul>
