--- a/news.html
+++ b/news.html
@@ -82,6 +82,19 @@
 
                 <h1 class="page-header">News</h1>
 
+
+<h1 class="page-header"><small>July 2021</small></h1>
+
+<p> 
+<strong> Congratulations to all co-authors on our recent collaborative publication: </strong> 
+X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir (2021) </em> </p>
+<br>
+</p>
+<strong> 
+
+    Dr Olga Kuksenok is now an <a href= https://www.nature.com/commsphys/about/editorial-board> Editorial Board Member of Communications Physics (Nature Research Group) </a></strong>
+
+
 <h1 class="page-header"><small>May 2021</small></h1>
 <p> Welcome to the undergraduate students joining our lab in Summer 2021:</p>
 
@@ -101,8 +114,8 @@ The award is sponsored by the POLY/PMSE MACRO committee. </p>
 <p> 
     Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale modeling of nanogel degradation: effect of crosslink density and particle size </em>
   
-  </p> ******************************************
-
+  </p> 
+  <br>
 <p> 
 <strong>   Congratulations to Yao Xiong on his recent publication: </strong> </p>
    <p> Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
@@ -117,7 +130,8 @@ The award is sponsored by the POLY/PMSE MACRO committee. </p>
 <p> 
     Poster: <strong>Miller, E.,</strong>  Palkar, V., Kuksenok, O., <em> Mesoscale Modeling of Controlled Erosion of Tetra-Arm Polyethylene Glycol Based Nanogels </em>2020 Virtual MRS Meeting.
   
-  </p> ******************************************
+  </p> 
+  <br>
 <p>
 </p> 
 
