--- a/pubs.html
+++ b/pubs.html
@@ -81,6 +81,7 @@
                 <h1 class="page-header">Publications
                 </h1>
 
+<p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir (2021) </em> </p>
 
 <p> 91. Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
 
@@ -101,8 +102,9 @@
 
 <p>85. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003
 >"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. <em> Current Opinion in Solid State and Materials Science </em> , 23 (1), 50-61 (2019)</p>
-
-
+</p>
+<!-- Image
+                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> -->
 <p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
 
 <p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119518068.ch1> "Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> </a> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
@@ -124,7 +126,10 @@
 <p>77. Yong, X., Crabb, E.J, Moellers, N.M, Salib, I, McFarlin, G.T, Kuksenok, O., Balazs, A.C. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119001379.ch9
 >"Harnessing Self‐Healing Vesicles to Pick Up, Transport, and Drop Off Janus Particles"</a></strong> Self‐Assembly: From Surfactants to Nanoparticles, John Wiley & Sons, Inc. (2018) </p>
 
+</p>
+<!-- Image
 
+                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> -->
 <p>76. Yadavalli N.S., Borodinov, N., Choudhury, C.K., Quiñones-Ruiz, T., Laradji, A.M., Tu, S., Lednev, I.K., Kuksenok, O., Luzinov, I., and S. Minko. <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>"Thermal Stabilization of Enzymes with Molecular Brushes"</a></strong> ACS Catalysis 7 (12), 8675-8684
 </p>
 
@@ -134,26 +139,16 @@
 
 <p>73. Yong, X., Snow, S.C., Kuksenok, O., Balazs, A.C., <strong>"Developing Hybrid Modeling Methods to Simulate Self-Assembly in Polymer Nanocomposites"</strong>, Self-Assembling Systems: Theory and Simulation, 20 (2016).</p>
 
-                <p class="break-an"><a name="72">&nbsp;</a></p>
-                <a href=http://pubs.rsc.org/en/Content/ArticleLanding/2016/MH/C5MH00212E#!divAbstract><img src="images/Ref72.png" class="illustration"></a>
-                <p>72. Kuksenok. O., and Balazs, A.C., <strong>“Stimuli-responsive behavior of composites integrating thermo-responsive gels with photo-responsive fibers”</strong>, Mater. Horiz., DOI: 10.1039/C5MH00212E (2016)</p><p class="abstract">Materials that could be reconfigured multiple times into different shapes with the use of different stimuli could dramatically impact manufacturing processes. As a step toward creating such useful, adaptive materials, we use computational modeling to design a composite that integrates a thermo-responsive polymer gel and photosensitive fibers. The gel displays a lower critical solution temperature (LCST), and thus, shrinks at elevated temperatures. The elastic fibers are functionalized with spirobenzopyran (SP) chromophores, which become hydrophobic under blue light. If these chromophores are uniformly distributed in this LCST gel (without the embedded fibers), then both light and heat produce the same effect on the sample, causing the gel to undergo a uniform collapse. When the SP-functionalization is confined to fibers that are embedded in the gel, the material displays distinctly different behavior in the presence of light and heat. In particular, samples anchored to a surface bend in one direction when illuminated and in the opposite direction when heated. When the sample is detached from the surface, then the composites shrink like an accordion when heated and bend like a caterpillar when illuminated. Common to both the tethered and untethered samples, one material displays a distinct response to the different stimuli. Hence, our findings indicate how a given sample can be fashioned into different shapes through the use of separate stimuli. Overall, our results point to a robust method for controllably reconfiguring the morphology of compliant composites and amplifying the effects of external environmental cues (light or temperature) on the behavior of these systems.
-</p>
-<p class="break"></p>
-                <a href=http://pubs.rsc.org/en/content/articlelanding/2011/sm/c0sm01007c#!divAbstract><img src="images/Ref71.gif" class="illustration" style="width:200px"></a>
+<p>72. Kuksenok. O., and Balazs, A.C., <strong>“Stimuli-responsive behavior of composites integrating thermo-responsive gels with photo-responsive fibers”</strong>, Mater. Horiz., DOI: 10.1039/C5MH00212E (2016)</p>
+
 <p>71. Liu, Y., Yong, X., McFarlin IV, G.T., Kuksenok. O., Aizenberg, J., and Balazs, A.C., <strong>“Designing a gel–fiber composite to extract nanoparticles from solution,”</strong> Soft Matter, DOI: 10.1039/C5SM01719J (2015).</p>
 
 <p>70. Liu, Y., McFarlin IV, G.T., Yong, X., Kuksenok. O., and Balazs, A.C., “Designing Composite Coatings That Provide a Dual Defense against Fouling,” Langmuir, 31 7524-7532 (2015)</p>
 
-                <p class="break-an"><a name="69">&nbsp;</a></p>
-
-                <a href=http://www.nature.com/articles/srep09569><img src="images/hp/Ref69.png" class="illustration" style="width:200px"></a>
 <p>69. Kuksenok, O., and Balazs, A.C., <strong>“Designing Dual-functionalized Gels for Self- reconfiguration and Autonomous Motion,”</strong> Scientific Reports, 5, 9569 (2015)</p>
-                <p class="abstract">Human motion is enabled by the concerted expansion and contraction of interconnected muscles that are powered by inherent biochemical reactions. One of the challenges in the field of biomimicry is eliciting this form of motion from purely synthetic materials, which typically do not generate internalized reactions to drive mechanical action. Moreover, for practical applications, this bio-inspired motion must be readily controllable. Herein, we develop a computational model to design a new class of polymer gels where structural reconfigurations and internalized reactions are intimately linked to produce autonomous motion, which can be directed with light. These gels contain both spirobenzopyran (SP) chromophores and the ruthenium catalysts that drive the oscillatory Belousov-Zhabotinsky (BZ) reaction. Importantly, both the SP moieties and the BZ reaction are photosensitive. When these dual-functionalized gels are exposed to non-uniform illumination, the localized contraction of the gel (due to the SP moieties) in the presence of traveling chemical waves (due to the BZ reaction) leads to new forms of spontaneous, self-sustained movement, which cannot be achieved by either of the mono-functionalized networks.</p>
-                <p class="break"></p>
-                <a href=http://www.nature.com/nchem/journal/v7/n5/full/nchem.2203.html><img src="images/Ref66.png" class="illustration" style="width:248px"></a>
 
 <p>68. Shastri A., He, X., Mc Gregor, L., Liu, Y., Mujica, M., Vasquez, Y., Bhattacharya, A., Ma, Y., Aizenberg, M., Kuksenok, O., Balazs, A.C., and Aizenberg, J., “An aptamer-functionalized chemomechanically modulated biomolecule catch-and-release system,” Nature Chemistry,7(5) 447-454 (2015)</p>
-                <p>67. Yong, X., Kuksenok, O., and Balazs, A.C., “Modeling Free Radical Polymerization Using Dissipative Particle Dynamics,” Polymer, 72 (18), 217–225 (2015) </p>
+<p>67. Yong, X., Kuksenok, O., and Balazs, A.C., “Modeling Free Radical Polymerization Using Dissipative Particle Dynamics,” Polymer, 72 (18), 217–225 (2015) </p>
 
 <p>66. Yong, X., Simakova, A., Averick, S., Gutierrez, J., Kuksenok, O., Balazs, A.C., Matyjaszewski, K., <strong>“Stackable, Covalently-Fused Gels: Repair and Composite Formation,”</strong> Macromolecules, 48 (4), 1169–1178 (2015)
 </p>
@@ -167,7 +162,9 @@
 </p>
 <p>61. Deb, D., Kuksenok, O., Dayal, P., and Balazs, A.C., “Forming self-rotating pinwheels from assemblies of oscillating polymer gels,” Mater. Horiz., 1, 125-132 (2014)
 </p>
-                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A>
+<!-- Image
+
+                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> --->
 <p>60. Kuksenok, O., and Balazs, A.C., <strong>“Modeling the Photoinduced Reconfiguration and Directed Motion of Polymer Gels,”</strong> Advanced Functional Materials, 23 (36), 4601-4610, (2013)
 </p>
 <p>59. Yong, X., Kuksenok, O., Matyjaszewski, K., and Balazs, A.C., “Harnessing Interfacially-Active Nanorods to Regenerate Severed Polymer Gels,” Nano Letters 13, 6269-6274, (2013)
@@ -186,21 +183,16 @@
 </p>
 <p>52. Liu, Y., Kuksenok, O., and Balazs, A.C., “Coassembly of nanorods and photosensitive binary blends: "combing" with light to create, periodically ordered nanocomposites,” Langmuir 29 (2), 750-760, (2013)
 </p>
-
-                <a href=http://www.nature.com/nature/journal/v487/n7406/full/nature11223.html><img src="images/Ref51.png" class="illustration" style="width:450px"></a>
 <p>51. He, X., Aizenberg, M., Kuksenok, O., Zarzar, L.D., Shastri, A., Balazs, A.C., and Aizenberg, J., <strong>“Synthetic homeostatic materials with chemo-mechanochemical self-regulation,”</strong> Nature , 487, 214-218, (2012)
 </p>
 <p>50. Ma, Y., Bhattacharya, A., Kuksenok, O., Perchak, D., and Balazs, A.C., “Modeling the Transport of Nanoparticle-filled Binary Fluids through Micropores,” Langmuir 28 (31), 11410-11421 (2012)
 </p>
 <p>49. Yashin, V.V., Kuksenok, O., Dayal, P., and Balazs, A.C., “Mechano-chemical oscillations and waves in reactive gels,” Rep. Prog. Phys., 75, 066601 (2012)
 </p>
-                <p class="break"></p>
-                <a href=http://pubs.rsc.org/en/content/articlelanding/2011/sm/c0sm01007c#!divAbstract><img src="images/Ref48.png" class="illustration"></a>
+<!-- Image
+
+                <a href=http://pubs.rsc.org/en/content/articlelanding/2011/sm/c0sm01007c#!divAbstract><img src="images/Ref48.png" class="illustration"></a> -->
 <p>48. Chen, I.C., Kuksenok, O., Yashin, V.V., Balazs, A.C., and Van Vliet, K.J., <strong>“Mechanical Resuscitation of Chemical Oscillations in Belousov-Zhabotinsky Gels,”</strong> Adv. Funct. Mater. 22(12), 2535-2541, (2012)
-</p>
-        <p class="abstract">Polymeric hydrogels that exhibit autonomous, coupled chemical and mechanical oscillations are a unique example of synthetic, active soft matter. Here, we explore the effects of gel aspect ratio and absolute dimensions on pattern formation in hydrogels undergoing the Belousov-Zhabotinsky (BZ) reaction. We synthesize and analyze N-isopropylacrylamide gels containing covalently bound BZ catalyst and polyacrylamide-silica gel composites containing physically associated BZ catalyst. Through both experiments and computational simulations, we demonstrate that the oscillating chemical patterns within BZ gels can be altered by changing the shape and size of the gel, and that these patterns evolve over long timescales. In our simulations, we utilize an improved Oregonator model, which explicitly accounts for the total concentration of the catalyst grafted onto the polymer network. We find that the three-dimensional simulations of the BZ gels successfully reproduce patterns, oscillation periodicity, and catalyst concentration-dependence observed in experiments. Together, these findings validate our theoretical and computational approaches for modeling chemomechanical coupling in active, chemo-responsive gels, and enable future studies that exploit the shape- and size-confinement effects of self-oscillating reactions.
-</p>
-        <p class="break"></p>
 <p>47. Epstein, I.R., Vanag, V.K., Balazs, A.C., Kuksenok, O., Dayal, P., and Bhattacharya, A., “Chemical Oscillators in Structured Media,” Acc. Chem. Res., 45 (12), 2160-2168 (2012)
 </p>
 <p>46. Dayal, P., Kuksenok, O., Bhattacharya, A., and Balazs, A.C., “Chemicallymediated communication in self-oscillating, biomimetic cilia,” J. Mater. Chem., 22, 241-250, (2012) -4-
@@ -232,13 +224,8 @@
 <p>32. Dayal, P., Kuksenok, O., and Balazs, A.C., “Forming ordered structures in ternary, photosensitive blends through the use of masks,” Soft Matter, 5, 1205 - 1213 (2009)
 </p>
 
-
-<p class="break-an"><a name="31">&nbsp;</a></p>
-                <a href=http://journals.aps.org/pre/abstract/10.1103/PhysRevE.78.041406><img src="images/hp/ForHomePage_movie_OpensRef31_3.gif" class="illustration"></a>
 <p>31. Kuksenok, O., Yashin, V.V., and Balazs, A.C., <strong>“Three-dimensional model for chemoresponsive polymer gels undergoing the Belousov-Zhabotinsky reaction,”</strong> Phys. Rev. E 78, 041406 (2008).
 </p>
-                <p class="abstract">We develop a computational model to capture the complex, three-dimensional behavior of chemoresponsive polymer gels undergoing the Belousov-Zhabotinsky reaction. The model combines components of the finite difference and finite element techniques and is an extension of the two-dimensional gel lattice spring model recently developed by two of us [V. V. Yashin and A. C. Balazs, J. Chem. Phys. 126, 124707 (2007)]. Using this model, we undertake the first three-dimensional (3D) computational studies of the dynamical behavior of chemoresponsive BZ gels. For sufficiently large sample sizes and a finite range of reaction parameters, we observe regular and nonregular oscillations in both the size and shape of the sample that are coupled to the chemical oscillations. Additionally, we determine the critical values of these reaction parameters at the transition points between the different types of observed behavior. We also show that the dynamics of the chemoresponsive gels drastically depends on the boundary conditions at the surface of the sample. This 3D computational model could provide an effective tool for designing gel-based, responsive systems.</p>
-                <p class="break"></p>
 <p>30. Kuksenok, O., and Balazs, A.C., ”Gradient Sensing in Reactive, Ternary Membranes,” Langmuir, 24 (5), 1878 (2008). -5-
 </p>
 <p>29. Dayal, P., Kuksenok, O., and Balazs, A.C., ”Using a Single Mask to Create Multiple Patterns in Three-Component, Photoreactive Blends,” Langmuir; 24(5) 1621 (2008)
@@ -247,13 +234,8 @@
 </p>
 <p>27. Kuksenok, O., Yashin, V.V., and Balazs, A.C., “Mechanically Induced Chemical Oscillations and Motion in Responsive Gels,” Soft Matter 3, 1138 (2007)
 </p>
-
-            <p class="break-an"><a name="26">&nbsp;</a></p>
-                <a href=http://journals.aps.org/pre/abstract/10.1103/PhysRevE.74.011502><img src="images/hp/LBTernary_OpensRef26image_4.png" class="illustration" style="width:150px;"></a>
 <p>26. Kuksenok, O., Travasso, R.D.M., and Balazs, A.C., <strong>"Dynamics of ternary mixtures with photosensitive chemical reactions: Creating three dimensionally ordered blends,"</strong> Phys. Rev. E 74, 011502 (2006)
 </p>
-                <p class="abstract">Using computer simulations, we establish an approach for creating defect-free, periodically ordered polymeric materials. The system involves ABC ternary mixtures where the A and B components undergo a reversible photochemical reaction. In addition, all three components are mutually immiscible and undergo phase separation. Through the simulations, we model the effects of illuminating a three-dimensional (3D) sample with spatially and temporally dependent light irradiation. Experimentally, this situation can be achieved by utilizing both a uniform background light and a spatially localized, higher intensity light, and then rastering a higher-intensity light over the 3D sample. We first focus on the case where the higher-intensity light is held stationary and focused in a distinct region within the system. The C component is seen to displace the A and B within this region and replicate the pattern formed by the higher-intensity light. In effect, one can write a pattern of C onto the AB binary system by focusing the higher-intensity light in the desired arrangement. We isolate the conditions that are necessary for producing clearly written patterns of C (i.e., for obtaining sharp interfaces between the C and A/B domains). We next consider the effect of rastering a higher-intensity light over this sample and find that this light "combs out" defects in the AB blend as it moves through the system. The resulting material displays a defect-free structure that encompasses both a periodic ordering of the A and B domains and a well-defined motif of C. In this manner, one can create hierarchically patterned materials that exhibit periodicity over two distinct length scales. The approach is fully reversible, noninvasive, and points to a novel means of patterning with homopolymers, which normally do not self-assemble into periodic structures.</p>
-                <p class="break"></p>
 <p>25. Travasso, R.D.M., Kuksenok, O., and Balazs, A.C., “Exploiting Photo-induced Reactions in Polymer Blends to Create Hierarchically Ordered, Defect-free Materials,” Langmuir 22(6), 2620-2628 (2006).
 </p>
 <p>24. Kuksenok, O., Jasnow, D., and Balazs A.C., “Local control of periodic pattern formation in binary fluids within microchannels,” Phys. Rev. Lett. 95, 240603 (2005)
