--- a/news.html
+++ b/news.html
@@ -85,6 +85,16 @@
 
 <h1 class="page-header"><small>July 2021</small></h1>
 
+ <p>Raleigh Wunderlich, Janelle Arnold, and Usmaan Al-Shehab are presenting their work at 8th Annual Summer Undergraduate Research Symposium
+<p>
+                <a href= images/photos/Raleigh2021.jpg> <img src="images/photos/Raleigh2021.jpg" height="350"></a>&nbsp;
+                <a href= images/photos/Janelle.jpg><img src="images/photos/Janelle.jpg" height="350"></p></a>
+                <p>
+                <a href= images/photos/Usmaan2021.jpg> <img src="images/photos/Usmaan2021.jpg" height="307"></p> </a>
+ <p>______________________________</p>
+
+
+
 <p> 
 <strong> Congratulations to all co-authors on our recent collaborative publication: </strong> 
 X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir (2021) </em> </p>
@@ -99,7 +109,7 @@ X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a
 <p> Welcome to the undergraduate students joining our lab in Summer 2021:</p>
 
 
- <img src="images/people/Raleigh.jpg" height="180"> &nbsp; <img src="images/people/Janelle.jpg" height="180"> &nbsp;<img src="images/people/usmaan.jpg" height="180">&nbsp;<img src="images/people/Devanshu.png" height="180"> </p>
+ <img src="images/people/Raleigh.jpg" height="180"> &nbsp; <a href=Janelle.html> <img src="images/people/Janelle.jpg" height="180"> &nbsp;<img src="images/people/usmaan.jpg" height="180">&nbsp;<img src="images/people/Devanshu.png" height="180"> </p>
 <p> Left to right: 
 Raleigh Wunderlich and Janelle Arnold (Advanced Material Sciences REU), Usmaan Al-Shehab (Biophysics REU), Devanshu Thakar (Internship IIT Gandhinagar)
 </p>
